<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".maincontent.medicalbook.OverViewFragment"
    android:padding="16dp">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="2"
        android:layout_gravity="center_horizontal"
        >
        <LinearLayout
            android:id="@+id/frame1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="5dp"
            >
            <androidx.cardview.widget.CardView
                android:id="@+id/cardView1"
                android:layout_height="80dp"
                android:layout_width="70dp"
                app:cardCornerRadius="10dp"
                >
            <ImageView
                android:id="@+id/icon1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_weight"
                />
            </androidx.cardview.widget.CardView>
            <TextView
                android:id="@+id/num1"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/frame2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="5dp"
            >
            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_height="80dp"
                android:layout_width="70dp"
                app:cardCornerRadius="10dp"
                >
                <ImageView
                    android:id="@+id/icon2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/ic_height"
                    />
            </androidx.cardview.widget.CardView>
            <TextView
                android:id="@+id/num2"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/frame3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="5dp"
            >
            <androidx.cardview.widget.CardView
                android:id="@+id/cardView3"
                android:layout_height="80dp"
                android:layout_width="70dp"
                app:cardCornerRadius="10dp"
                >
                <ImageView
                    android:id="@+id/icon3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/ic_beat"
                    />
            </androidx.cardview.widget.CardView>
            <TextView
                android:id="@+id/num3"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/heart"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/frame4"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="5dp"
            >
            <androidx.cardview.widget.CardView
                android:id="@+id/cardView4"
                android:layout_height="80dp"
                android:layout_width="70dp"
                app:cardCornerRadius="10dp"
                >
                <ImageView
                    android:id="@+id/icon4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/ic_weight"
                    />
            </androidx.cardview.widget.CardView>
            <TextView
                android:id="@+id/num4"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vaccination"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/frame5"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="5dp"
            >
            <androidx.cardview.widget.CardView
                android:id="@+id/cardView5"
                android:layout_height="80dp"
                android:layout_width="70dp"
                app:cardCornerRadius="10dp"
                >
                <ImageView
                    android:id="@+id/icon5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/ic_weight"
                    />
            </androidx.cardview.widget.CardView>
            <TextView
                android:id="@+id/num5"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_text_1"
                />
        </LinearLayout>
    </GridLayout>


</FrameLayout>